# travel-place-search-by-words-with-LLM

./: Dockerfile  README.md  app.py  chatbot.py  docker-compose.yml  evalulate.py  intent_chatbot.py  muti_purpose_chatbot.py  promte.txt  pyproject.toml  requirements.txt  utils.py
etc/: nginx.conf
model/: saved_model.pb
prompt/: intent_classify.txt
templates/: hello.html
utils/: file.py
