[tool.poetry]
name = "travel-place-search-by-words-with-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "0.34.2"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.5.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
authlib = "1.3.1"
blinker = "1.8.2"
blis = "0.7.11"
catalogue = "2.0.10"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpathlib = "0.19.0"
colorama = "0.4.6"
confection = "0.1.5"
cryptography = "43.0.1"
cymem = "2.0.8"
datasets = "3.0.0"
dill = "0.3.8"
distro = "1.9.0"
emoji = "2.13.0"
exceptiongroup = "1.2.2"
filelock = "3.16.1"
flask = "3.0.3"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gevent = "24.2.1"
git-filter-repo = "2.45.0"
greenlet = "3.1.1"
grpcio = "1.66.1"
grpcio-health-checking = "1.66.1"
grpcio-tools = "1.66.1"
gunicorn = "23.0.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
huggingface-hub = "0.25.0"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jiter = "0.5.0"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain = "0.3.0"
langchain-core = "0.3.5"
langchain-openai = "0.2.0"
langchain-text-splitters = "0.3.0"
langcodes = "3.4.0"
langsmith = "0.1.125"
language-data = "1.2.0"
marisa-trie = "1.2.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
mpmath = "1.3.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
murmurhash = "1.0.10"
networkx = "3.3"
numpy = "1.26.4"
openai = "1.47.0"
orjson = "3.10.7"
packaging = "24.1"
pandas = "2.2.3"
preshed = "3.0.9"
protobuf = "5.28.2"
psutil = "6.0.0"
pyarrow = "17.0.0"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pysentimiento = "0.7.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyyaml = "6.0.2"
regex = "2024.9.11"
requests = "2.32.3"
rich = "13.8.1"
safetensors = "0.4.5"
shellingham = "1.5.4"
six = "1.16.0"
smart-open = "7.0.4"
sniffio = "1.3.1"
spacy = "3.7.6"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlalchemy = "2.0.35"
srsly = "2.4.8"
sympy = "1.13.3"
tenacity = "8.5.0"
thinc = "8.2.5"
tiktoken = "0.7.0"
tokenizers = "0.19.1"
torch = "2.4.1"
tqdm = "4.66.5"
transformers = "4.44.2"
typer = "0.12.5"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.3"
validators = "0.34.0"
wasabi = "1.1.3"
weasel = "0.4.1"
weaviate-client = "4.8.1"
werkzeug = "3.0.4"
wrapt = "1.16.0"
xxhash = "3.5.0"
yarl = "1.11.1"
zope-event = "5.0"
zope-interface = "7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
